troubleshoot float layout issues

--- a/flexPriceList.css
+++ b/flexPriceList.css
@@ -11,15 +11,6 @@ body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.content-wrapper{
-   background:rgba(159, 182, 205, 0.9);
-   width:100%;
-   height:100%;
-   padding:0;
-   margin:0;
-   padding:50px 0px;
- }
- 
  h1,h3{
    text-align:center;
    text-transform:uppercase;
@@ -33,12 +24,23 @@ body {
    font-size: xx-large;
    font-family:'Questrial';
  }
-
+ h2 {
+   letter-spacing:3px;
+   font-size:1em;
+   }
  h3 { 
     font-size:3em;
     font-family:'Old Standard TT';
 }
-
+.content-wrapper{
+   background:rgba(159, 182, 205, 0.9);
+   width:100%;
+   height:100%;
+   padding:0;
+   margin:0;
+   padding:50px 0px;
+ }
+ 
 .content {
    height:100%;
    margin:0px 50px;
@@ -56,14 +58,6 @@ body {
    display: flex;
    flex-direction: column;
  }
-
-   .social h2 {
-      font-family:'Questrial';
-      text-transform:uppercase;
-      letter-spacing:3px;
-      color:white;
-      font-size:16px;
-      }
 
 ul {
      padding:0;
