--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,116 @@
 * {
    box-sizing: border-box;
- }
- 
- .columns {
-   float: left;
-   width: 33.3%;
-   padding: 8px;
- }
- 
- .price {
-   list-style-type: none;
-   border: 1px solid #eee;
-   margin: 0;
-   padding: 0;
-   -webkit-transition: 0.3s;
-   transition: 0.3s;
- }
- 
- .price:hover {
-   box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
- }
- 
- .price .header {
-   background-color: #111;
-   color: white;
-   font-size: 25px;
- }
- 
- .price li {
-   border-bottom: 1px solid #eee;
-   padding: 20px;
-   text-align: center;
- }
- 
- .price .grey {
-   background-color: #eee;
+}
+
+html {
    font-size: 20px;
+   padding: 0;
+   margin: 0;
+}
+body {
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+h1,h2,h3{
+   text-align:center;
+   text-transform:uppercase;
+   letter-spacing:4px;
+   margin-top:10px;
+   color:white;
+   font-weight: 500;
  }
- 
- .button {
-   background-color: #4CAF50;
-   border: none;
-   color: white;
-   padding: 10px 25px;
-   text-align: center;
-   text-decoration: none;
-   font-size: 18px;
+
+ h1 {
+   font-size: xx-large;
+   font-family:'Questrial';
  }
- 
- @media only screen and (max-width: 600px) {
-   .columns {
-     width: 100%;
+
+ h3 { 
+    font-size:2em;
+    font-family:'Old Standard TT';
+}
+
+h2 {
+   letter-spacing:3px;
+   font-size:1em;
    }
+ .content-wrapper {
+    background:rgba(159, 182, 205, 0.9);
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
+    padding:50px 0px;
  }
+
+ .content {
+   height:100%;
+   margin:0px 50px;
+   padding:0px 60px;
+ }
+
+ .clearfix:after { 
+   content: "."; 
+   visibility: hidden; 
+   display: block; 
+   height: 0; 
+   clear: both;
+}
+
+ .social {
+   float: left;
+   width: 29%;
+   padding: 30px 0;
+   margin: 20px;
+   border: 3px solid white;
+ }
+ 
+ul {
+      padding:0;
+      text-align:center;
+      list-style:none; 
+    }
+ 
+   ul li {
+          font-family:'Questrial';
+          color:white;
+          padding:10px;
+      }
+
+   .sign-up {
+      background-color: #697886;
+      font-size: 1.5em;
+      text-align: center;
+  }
+
+      a.button {
+         background-color:#697886;
+         color: #fff;
+         text-decoration: none;
+      }
+      a.button:hover {
+         color: rgb(202, 197, 197);
+         font-size: 1.01em;
+      }
+ 
+/*Queries */
+
+/* max 1177px */
+@media only screen and (max-width: 1177px){
+   .content-wrapper {
+      margin: 0px;
+      padding: 0px;
+   }
+}
+
+/* max 1024px */
+@media only screen and (max-width: 1024px){
+   .content-wrapper{
+      padding:0 10%;
+      
+   }
+   .social {
+      width: 100%;
+   }
+}
+
+
